# Test.SciProj

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  conda_environment.txt  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
docs/: conf.py
notebooks/2022-09/: 20220904_tk_testlint.ipynb
src/tk_sciproj_test/: __init__.py
tests/: test_package.py
