[build-system]
requires = ["poetry_core>=0.7"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "tk_sciproj_test"
version = "0.1.0"
authors = [
  "Toni Kukurin, <tkukurin@gmail.com>",
]
maintainers = [
  "Toni Kukurin, <tkukurin@gmail.com>",
]
description = "A great sci package."
readme = "README.md"
classifiers = [
  "Topic :: Scientific/Engineering",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Development Status :: 1 - Planning",
]

[tool.poetry.dependencies]
python = ">=3.9,<4"
typing_extensions = { version = ">=3.7" }

pytest = { version = ">=6", optional = true }
pytest-cov = { version = ">=3", optional = true }
sphinx = { version = "^4.0", optional = true }
sphinx_book_theme = { version = ">=0.1.0", optional = true }
sphinx_copybutton = { version = ">=0.3.0", optional = true }
pytesseract = "^0.3.10"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = ">= 6"
pytest-cov = ">= 3"

[tool.poetry.extras]
test = ["pytest", "pytest-cov"]
dev = ["pytest", "pytest-cov"]
docs = [
    "sphinx",
    "sphinx-book-theme",
    "sphinx_copybutton",
]


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
testpaths = [
  "tests",
]


[tool.mypy]
files = "src"
python_version = "3.9"
warn_unused_configs = true
strict = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true


[tool.isort]
profile = "black"


[tool.pylint]
master.py-version = "3.9"
master.ignore-paths= ["src/tk_sciproj_test/_version.py"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "design",
  "fixme",
  "line-too-long",
  "wrong-import-position",
]
